data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_184.wast
;; 5. **Branch to Loop with Non-Matching Block Type**:    - **Description**: Test branching to a loop where the block type does not match the expected type for the branch, leading to unintended type errors and control flow issues.    - **Constraint**: Correct validation of block types and ensuring consistent operand and result types for branches.

(assert_invalid
  (module
    (func (result i32)
      (loop (result i32)
        (br 0)
        (i32.const 0)
      )
    )
  )
  "type mismatch"
)